uploading the next set of problems

--- a/cfhtml.html
+++ b/cfhtml.html
@@ -2,5 +2,6 @@
 
 <h2>WOOOOOOO!</h2>
 
-<script src="./code_fights.js"></script>
+<!-- <script src="./code_fights.js"></script> -->
 <script src="./shapeArea.js"></script>
+<script src="./addTwo.js"></script>
