--- a/cfhtml.html
+++ b/cfhtml.html
@@ -4,4 +4,4 @@
 
 <!-- <script src="./code_fights.js"></script> -->
 <script src="./shapeArea.js"></script>
-<script src="./addTwo.js"></script>
+<!-- <script src="./addTwo.js"></script> -->
