--- a/cfhtml.html
+++ b/cfhtml.html
@@ -3,5 +3,6 @@
 <h2>WOOOOOOO!</h2>
 
 <!-- <script src="./code_fights.js"></script> -->
-<script src="./shapeArea.js"></script>
+<!-- <script src="./shapeArea.js"></script> -->
 <!-- <script src="./addTwo.js"></script> -->
+<script src="./consecutive2.js"></script>
