uploading next part of consecutive 2. need to create the new array.

--- a/cfhtml.html
+++ b/cfhtml.html
@@ -1,7 +1,8 @@
-<h1>Code fights</h1>
+<h1 style="text-align: center">Code fights</h1>
 
-<h2>WOOOOOOO!</h2>
-
+<div>
+    <p style="text-align: center"> Consecutive 2</p>
+</div>
 <!-- <script src="./code_fights.js"></script> -->
 <!-- <script src="./shapeArea.js"></script> -->
 <!-- <script src="./addTwo.js"></script> -->
