--- a/cfhtml.html
+++ b/cfhtml.html
@@ -6,4 +6,5 @@
 <!-- <script src="./code_fights.js"></script> -->
 <!-- <script src="./shapeArea.js"></script> -->
 <!-- <script src="./addTwo.js"></script> -->
-<script src="./consecutive2.js"></script>
+<!-- <script src="./consecutive2.js"></script> -->
+<script src="./almostIncreasingSequence.js"></script>
