uploading some changes to css

--- a/cfhtml.html
+++ b/cfhtml.html
@@ -1,8 +1,25 @@
-<h1 style="text-align: center">Code fights</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>CODE FIGHTS</title>
+    <link rel="stylesheet" href="./css.css">
+</head>
+<body>
+    
+</body>
+</html>
+
+<img src="./Sf4-logo.jpg" alt="">
+<img src="./maxresdefault.jpg" alt="">
 
 <div>
     <p style="text-align: center"> Consecutive 2</p>
 </div>
+
+
+
 <!-- <script src="./code_fights.js"></script> -->
 <!-- <script src="./shapeArea.js"></script> -->
 <!-- <script src="./addTwo.js"></script> -->
