uploading for the rest of the day

--- a/cfhtml.html
+++ b/cfhtml.html
@@ -24,4 +24,5 @@
 <!-- <script src="./shapeArea.js"></script> -->
 <!-- <script src="./addTwo.js"></script> -->
 <!-- <script src="./consecutive2.js"></script> -->
-<script src="./almostIncreasingSequence.js"></script>
+<!-- <script src="./almostIncreasingSequence.js"></script> -->
+<script src="./matrixElementSum.js"></script>
