uploading todays with nested array

--- a/cfhtml.html
+++ b/cfhtml.html
@@ -20,9 +20,9 @@
 
 
 
-<!-- <script src="./code_fights.js"></script> -->
-<!-- <script src="./shapeArea.js"></script> -->
-<!-- <script src="./addTwo.js"></script> -->
-<!-- <script src="./consecutive2.js"></script> -->
-<!-- <script src="./almostIncreasingSequence.js"></script> -->
-<script src="./matrixElementSum.js"></script>
+<!-- <script src="./2.code_fights.js"></script> -->
+<!-- <script src="./5.shapeArea.js"></script> -->
+<!-- <script src="./1.addTwo.js"></script> -->
+<!-- <script src="./6.consecutive2.js"></script> -->
+<!-- <script src="./7.almostIncreasingSequence.js"></script> -->
+<script src="./8.matrixElementSum.js"></script>
