--- a/cfhtml.html
+++ b/cfhtml.html
@@ -25,5 +25,5 @@
 <!-- <script src="./1.addTwo.js"></script> -->
 <!-- <script src="./6.consecutive2.js"></script> -->
 <!-- <script src="./7.almostIncreasingSequence.js"></script> -->
-<script src="./8.matrixElementSum.js"></script>
-<!-- <script src="./9.allLongestStrings.js"></script> -->
+<!-- <script src="./8.matrixElementSum.js"></script> -->
+<script src="./9.allLongestStrings.js"></script>3
