uploading for another day

--- a/cfhtml.html
+++ b/cfhtml.html
@@ -15,7 +15,7 @@
 <img src="./maxresdefault.jpg" alt="">
 
 <div>
-    <p style="text-align: center; font-family:'Courier New', Courier, monospace"> Consecutive 2</p>
+    <p style="text-align: center; font-family:'Courier New', Courier, monospace"> All Longest Strings</p>
 </div>
 
 
@@ -26,4 +26,4 @@
 <!-- <script src="./6.consecutive2.js"></script> -->
 <!-- <script src="./7.almostIncreasingSequence.js"></script> -->
 <!-- <script src="./8.matrixElementSum.js"></script> -->
-<script src="./9.allLongestStrings.js"></script>3
+<script src="./9.allLongestStrings.js"></script>
