all longestStrings done. code reviews necessary to improve

--- a/cfhtml.html
+++ b/cfhtml.html
@@ -26,4 +26,5 @@
 <!-- <script src="./6.consecutive2.js"></script> -->
 <!-- <script src="./7.almostIncreasingSequence.js"></script> -->
 <!-- <script src="./8.matrixElementSum.js"></script> -->
-<script src="./9.allLongestStrings.js"></script>
+<!-- <script src="./9.allLongestStrings.js"></script> -->
+<script src="./10.commoncharacterCount.js"></script>
