--- a/cfhtml.html
+++ b/cfhtml.html
@@ -15,7 +15,7 @@
 <img src="./maxresdefault.jpg" alt="">
 
 <div>
-    <p style="text-align: center; font-family:'Courier New', Courier, monospace"> All Longest Strings</p>
+    <p style="text-align: center; font-family:'Courier New', Courier, monospace">Common character count</p>
 </div>
 
 
