uploading outlines for projects

--- a/cfhtml.html
+++ b/cfhtml.html
@@ -20,11 +20,12 @@
 
 
 
-<!-- <script src="./2.code_fights.js"></script> -->
-<!-- <script src="./5.shapeArea.js"></script> -->
-<!-- <script src="./1.addTwo.js"></script> -->
-<!-- <script src="./6.consecutive2.js"></script> -->
-<!-- <script src="./7.almostIncreasingSequence.js"></script> -->
-<!-- <script src="./8.matrixElementSum.js"></script> -->
-<!-- <script src="./9.allLongestStrings.js"></script> -->
-<script src="./10.commoncharacterCount.js"></script>
+<!-- <script src="Arcade/Intro/2.code_fights.js"></script> -->
+<!-- <script src="Arcade/Intro/5.shapeArea.js"></script> -->
+<!-- <script src="Arcade/Intro/1.addTwo.js"></script> -->
+<!-- <script src="Arcade/Intro/6.consecutive2.js"></script> -->
+<!-- <script src="Arcade/Intro/7.almostIncreasingSequence.js"></script> -->
+<!-- <script src="Arcade/Intro/8.matrixElementSum.js"></script> -->
+<!-- <script src="Arcade/Intro/9.allLongestStrings.js"></script> -->
+<script src="Arcade/Intro/10.commoncharacterCount.js"></script>
+<script src="Arcade/Intro/11.commoncharacterCount.js"></script>
