all files uploaded. now adding some previous better examples

--- a/cfhtml.html
+++ b/cfhtml.html
@@ -19,7 +19,7 @@
 </div>
 
 
-
+<!-- -------- ARCADE --------- -->
 <!-- <script src="Arcade/Intro/2.code_fights.js"></script> -->
 <!-- <script src="Arcade/Intro/5.shapeArea.js"></script> -->
 <!-- <script src="Arcade/Intro/1.addTwo.js"></script> -->
@@ -27,5 +27,9 @@
 <!-- <script src="Arcade/Intro/7.almostIncreasingSequence.js"></script> -->
 <!-- <script src="Arcade/Intro/8.matrixElementSum.js"></script> -->
 <!-- <script src="Arcade/Intro/9.allLongestStrings.js"></script> -->
-<script src="Arcade/Intro/10.commoncharacterCount.js"></script>
-<script src="Arcade/Intro/11.commoncharacterCount.js"></script>
+<!-- <script src="Arcade/Intro/10.commoncharacterCount.js"></script> -->
+<script src="Arcade/Intro/11.isLucky.js"></script>
+
+
+<!-- -------- INTERVIEW QUESTIONS --------- -->
+<!-- <script src="Arcade/Intro/11.isLucky.js"></script> -->
