--- a/cfhtml.html
+++ b/cfhtml.html
@@ -16,6 +16,7 @@
 
 <div>
     <p style="text-align: center; font-family:'Courier New', Courier, monospace">Common character count</p>
+    <p style="text-align: center; font-family:'Courier New', Courier, monospace"></p>
 </div>
 
 
@@ -28,8 +29,11 @@
 <!-- <script src="Arcade/Intro/8.matrixElementSum.js"></script> -->
 <!-- <script src="Arcade/Intro/9.allLongestStrings.js"></script> -->
 <!-- <script src="Arcade/Intro/10.commoncharacterCount.js"></script> -->
-<script src="Arcade/Intro/11.isLucky.js"></script>
+<!-- <script src="Arcade/Intro/11.isLucky.js"></script> -->
+<script src="Arcade/Intro/12.sortByHeight.js"></script>
+<!-- <script src="Arcade/Intro/13.reverseParentheses.js"></script> -->
+<!-- <script src="Arcade/Intro/14.alternatingSums.js"></script> -->
 
 
 <!-- -------- INTERVIEW QUESTIONS --------- -->
-<!-- <script src="Arcade/Intro/11.isLucky.js"></script> -->
+<!--    <script src="Arcade/Intro/11.isLucky.js"></script> -->
