--- a/cfhtml.html
+++ b/cfhtml.html
@@ -24,7 +24,7 @@
 <!-- <script src="Arcade/Intro/2.code_fights.js"></script> -->
 <!-- <script src="Arcade/Intro/5.shapeArea.js"></script> -->
 <!-- <script src="Arcade/Intro/1.addTwo.js"></script> -->
-<script src="Arcade/Intro/6.consecutive2.js"></script>
+<!-- <script src="Arcade/Intro/6.consecutive2.js"></script> -->
 <!-- <script src="Arcade/Intro/7.almostIncreasingSequence.js"></script> -->
 <!-- <script src="Arcade/Intro/8.matrixElementSum.js"></script> -->
 <!-- <script src="Arcade/Intro/9.allLongestStrings.js"></script> -->
@@ -32,7 +32,12 @@
 <!-- <script src="Arcade/Intro/11.isLucky.js"></script> -->
 <!-- <script src="Arcade/Intro/12.sortByHeight.js"></script> -->
 <!-- <script src="Arcade/Intro/13.reverseParentheses.js"></script> -->
-<!-- <script src="Arcade/Intro/14.alternatingSums.js"></script> -->
+<script src="Arcade/Intro/14.alternatingSums.js"></script>
+<!-- <script src="Arcade/Intro/15.addBorder.js"></script>
+    <script src="Arcade/Intro/16.areSimilar.js"></script> -->
+<!-- <script src="Arcade/Intro/17.arrayChange.js"></script> -->
+<!-- <script src="Arcade/Intro/18.palindromeRearranging.js"></script> -->
+
 
 
 <!-- -------- INTERVIEW QUESTIONS --------- -->
