--- a/cfhtml.html
+++ b/cfhtml.html
@@ -15,7 +15,7 @@
 <img src="./maxresdefault.jpg" alt="">
 
 <div>
-    <p style="text-align: center; font-family:'Courier New', Courier, monospace">Reverse Parathesis</p>
+    <h1 style="text-align: center; font-family:'Courier New', Courier, monospace">15. Add Border</h1>
     <p style="text-align: center; font-family:'Courier New', Courier, monospace"></p>
 </div>
 
@@ -32,9 +32,9 @@
 <!-- <script src="Arcade/Intro/11.isLucky.js"></script> -->
 <!-- <script src="Arcade/Intro/12.sortByHeight.js"></script> -->
 <!-- <script src="Arcade/Intro/13.reverseParentheses.js"></script> -->
-<script src="Arcade/Intro/14.alternatingSums.js"></script>
-<!-- <script src="Arcade/Intro/15.addBorder.js"></script>
-    <script src="Arcade/Intro/16.areSimilar.js"></script> -->
+<!-- <script src="Arcade/Intro/14.alternatingSums.js"></script> -->
+<script src="Arcade/Intro/15.addBorder.js"></script>
+    <!-- <script src="Arcade/Intro/16.areSimilar.js"></script> -->
 <!-- <script src="Arcade/Intro/17.arrayChange.js"></script> -->
 <!-- <script src="Arcade/Intro/18.palindromeRearranging.js"></script> -->
 
