--- a/cfhtml.html
+++ b/cfhtml.html
@@ -33,8 +33,8 @@
 <!-- <script src="Arcade/Intro/12.sortByHeight.js"></script> -->
 <!-- <script src="Arcade/Intro/13.reverseParentheses.js"></script> -->
 <!-- <script src="Arcade/Intro/14.alternatingSums.js"></script> -->
-<script src="Arcade/Intro/15.addBorder.js"></script>
-    <!-- <script src="Arcade/Intro/16.areSimilar.js"></script> -->
+<!-- <script src="Arcade/Intro/15.addBorder.js"></script> -->
+    <script src="Arcade/Intro/16.areSimilar.js"></script>
 <!-- <script src="Arcade/Intro/17.arrayChange.js"></script> -->
 <!-- <script src="Arcade/Intro/18.palindromeRearranging.js"></script> -->
 
